Optimize Maven performance #52